feat(Dialog): and popover css experimentation

--- a/src/patternfly/components/ModalBox/modal-box-close.hbs
+++ b/src/patternfly/components/ModalBox/modal-box-close.hbs
@@ -5,6 +5,8 @@
   {{#if @partial-block}}
     {{> @partial-block}}
   {{else}}
-    {{> button button--IsPlain=true button--IsIcon=true button--icon="times" button--aria-label="Close"}}
+    <form method="dialog">
+      <button>OK</button>
+    </form>
   {{/if}}
 </div>
