--- a/src/patternfly/components/ModalBox/modal-box.hbs
+++ b/src/patternfly/components/ModalBox/modal-box.hbs
@@ -1,4 +1,4 @@
-<div class="{{pfv}}modal-box
+<dialog class="{{pfv}}modal-box
   {{#unless modal-box--HasStatusTitle}}
     {{> modal-box--status-modifiers}}
   {{/unless}}
@@ -9,4 +9,4 @@
     {{{modal-box--attribute}}}
   {{/if}}>
   {{> @partial-block}}
-</div>
+</dialog>
