--- a/src/patternfly/components/Popover/examples/Popover.css
+++ b/src/patternfly/components/Popover/examples/Popover.css
@@ -1,5 +1,5 @@
-.ws-core-c-popover .ws-preview-html {
+/* .ws-core-c-popover .ws-preview-html {
   display: flex;
   align-items: center;
   justify-content: center;
-}
+} */
