--- a/src/patternfly/components/ModalBox/examples/ModalBox.css
+++ b/src/patternfly/components/ModalBox/examples/ModalBox.css
@@ -1,5 +1,6 @@
 .ws-core-c-modal .ws-preview-html {
-  display: flex;
+  /* display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
+  overflow: scroll;
 }
