fix(text-decoration): fixed bug with text-decoration in safari

--- a/scripts/gulp/icons_template.scss
+++ b/scripts/gulp/icons_template.scss
@@ -14,7 +14,7 @@
 	font-variant: normal;
 	font-weight: normal;
 	// speak: none; // only necessary if not using the private unicode range (firstGlyph option)
-	text-decoration: none;
+	text-decoration-line: none;
 	text-transform: none;
 }
 
