--- a/src/patternfly/components/Timestamp/timestamp.scss
+++ b/src/patternfly/components/Timestamp/timestamp.scss
@@ -24,7 +24,8 @@
   &.pf-m-help-text {
     --#{$timestamp}--Color: var(--#{$timestamp}--m-help-text--Color);
     
-    text-decoration: var(--#{$timestamp}--m-help-text--TextDecorationLine) var(--#{$timestamp}--m-help-text--TextDecorationStyle);
+    text-decoration-line: var(--#{$timestamp}--m-help-text--TextDecorationLine);
+    text-decoration-style: var(--#{$timestamp}--m-help-text--TextDecorationStyle);
     text-underline-offset: var(--#{$timestamp}--m-help-text--TextUnderlineOffset);
     cursor: pointer;
 
