--- a/src/patternfly/assets/pficon/pficon.scss
+++ b/src/patternfly/assets/pficon/pficon.scss
@@ -14,7 +14,7 @@
 	font-variant: normal;
 	font-weight: normal;
 	// speak: none; // only necessary if not using the private unicode range (firstGlyph option)
-	text-decoration: none;
+	text-decoration-line: none;
 	text-transform: none;
 }
 
