--- a/src/patternfly/components/SimpleList/simple-list.scss
+++ b/src/patternfly/components/SimpleList/simple-list.scss
@@ -43,7 +43,7 @@
   font-size: var(--#{$simple-list}__item-link--FontSize);
   color: var(--#{$simple-list}__item-link--Color);
   text-align: start;
-  text-decoration: none;
+  text-decoration-line: none;
   background-color: var(--#{$simple-list}__item-link--BackgroundColor);
   border: none;
   border-radius: var(--#{$simple-list}__item-link--BorderRadius);
@@ -58,7 +58,7 @@
     --#{$simple-list}__item-link--BackgroundColor: var(--#{$simple-list}__item-link--hover--BackgroundColor);
     --#{$simple-list}__item-link--Color: var(--#{$simple-list}__item-link--hover--Color);
 
-    text-decoration: none;
+    text-decoration-line: none;
   }
 
   &.pf-m-current {
