feat(Nav): draft debugging

--- a/src/patternfly/base/normalize.scss
+++ b/src/patternfly/base/normalize.scss
@@ -37,6 +37,9 @@
     font-weight: var(--pf-t--global--font--weight--body--default);
     line-height: var(--pf-t--global--font--line-height--body);
     color: var(--pf-t--global--text--color--regular);
+    // stylelint-disable property-no-unknown
+    interpolate-size: allow-keywords; 
+    // stylelint-enable property-no-unknown
   }
 
   :where(
