--- a/src/patternfly/components/Nav/nav.scss
+++ b/src/patternfly/components/Nav/nav.scss
@@ -78,13 +78,14 @@
   --#{$nav}__link--m-current__link-icon--Color: var(--pf-t--global--icon--color--regular);
 
   // * Nav subnav
+  --#{$nav}__subnav--MaxHeight: fit-content;  
   --#{$nav}__subnav--RowGap: var(--pf-t--global--border--width--extra-strong);
   --#{$nav}__subnav--PaddingInlineStart: var(--pf-t--global--spacer--md);
-  --#{$nav}__subnav--TransitionDuration--max-height: 0s; // no slide by default
-  --#{$nav}__subnav--TransitionTimingFunction--max-height: var(--pf-t--global--motion--timing-function--default);
+  --#{$nav}__subnav--max-height--TransitionDuration: 0s; // no slide by default
+  --#{$nav}__subnav--max-height--TransitionTimingFunction: var(--pf-t--global--motion--timing-function--default);
 
   @media ( prefers-reduced-motion: no-preference ) {
-    --#{$nav}__subnav--TransitionDuration--max-height: var(--pf-t--global--motion--duration--slide-in--short); // TODO I think short might be better that having it the same as the list's slide var(--pf-t--global--motion--duration--slide-in--default);
+    --#{$nav}__subnav--max-height--TransitionDuration: var(--pf-t--global--motion--duration--slide-in--default);
   }
 
   // * Nav scroll button
@@ -187,8 +188,7 @@
 }
 
 [class^="#{$nav}"][hidden] {
-  // display: none;
-  // border: 1px solid red;
+  display: none;
   max-height: 0;
 
   & .#{$nav}__list {
@@ -212,23 +212,34 @@
   row-gap: var(--#{$nav}__list--RowGap);
   column-gap: var(--#{$nav}__list--ColumnGap);
   opacity: 1;
-  transition: opacity var(--#{$nav}__list--TransitionDuration--opacity) var(--#{$nav}__list--TransitionTimingFunction--opacity), transform var(--#{$nav}__list--TransitionDuration--transform) var(--#{$nav}__list--TransitionTimingFunction--transform);
-  transform: translateY(0); 
 
+  // transition: opacity var(--#{$nav}__list--TransitionDuration--opacity) var(--#{$nav}__list--TransitionTimingFunction--opacity), transform var(--#{$nav}__list--TransitionDuration--transform) var(--#{$nav}__list--TransitionTimingFunction--transform);
+
+  // add display for the __list
+  transition: opacity var(--#{$nav}__list--TransitionDuration--opacity) var(--#{$nav}__list--TransitionTimingFunction--opacity), transform var(--#{$nav}__list--TransitionDuration--transform) var(--#{$nav}__list--TransitionTimingFunction--transform), display var(--#{$nav}__list--TransitionDuration--opacity) allow-discrete;
+  transform: translateY(0);
+
+  @starting-style {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
 }
 
 // - Nav subnav
 .#{$nav}__subnav {
   --#{$nav}__list--RowGap: var(--#{$nav}__subnav--RowGap); // this value is passed to --#{$nav}__item--RowGap--row-offset and updates clickable area based on value passed
 
-  height: auto;
-  max-height: 100dvh;
+  max-height: var(--#{$nav}__subnav--MaxHeight, fit-content); // This can be set in React to the proper height until allow-discrete, i.e. transition to auto, is fully supported
   padding-inline-start: var(--#{$nav}__subnav--PaddingInlineStart); // indent nested lists
   overflow-y: clip;
-  transition: max-height var(--#{$nav}__subnav--TransitionDuration--max-height) var(--#{$nav}__subnav--TransitionTimingFunction--max-height);
-
-  // transition-behavior: allow-discrete;
-  // border: 1px solid blue;
+  transition-timing-function: var(--#{$nav}__subnav--max-height--TransitionTimingFunction);
+  transition-duration: var(--#{$nav}__subnav--max-height--TransitionDuration);
+  transition-property: max-height, display;
+  transition-behavior: allow-discrete; // should allow transitions during show/hide 
+  
+  @starting-style {
+    max-height: 0;
+  }
 }
 
 // - Nav item
