--- a/src/patternfly/components/Nav/nav.scss
+++ b/src/patternfly/components/Nav/nav.scss
@@ -30,7 +30,7 @@
   --#{$nav}__item--ScrollSnapAlign: end;
 
   // Nav list animation variables
-  --#{$nav}__list--TransitionDuration--opacity: var(--pf-t--global--motion--duration--fade--default);
+  --#{$nav}__list--TransitionDuration--opacity: var(--pf-t--global--motion--duration--slide-in--default); // match the duration of the slide open
   --#{$nav}__list--TransitionTimingFunction--opacity: var(--pf-t--global--motion--timing-function--default);
 
   // * Nav section title
@@ -43,17 +43,17 @@
 
   // * Nav item
   --#{$nav}__item--RowGap: var(--#{$nav}__list--RowGap);
-  --#{$nav}__item--TransitionDuration: 0;
-  --#{$nav}__item--TransitionTimingFunction: var(--pf-t--global--motion--timing-function--default);
+  --#{$nav}__item--TransitionDuration--row-gap: 0;
+  --#{$nav}__item--TransitionTimingFunction--row-gap: var(--pf-t--global--motion--timing-function--default);
 
   @media (prefers-reduced-motion: no-preference) {
-    --#{$nav}__item--TransitionDuration: var(--pf-t--global--motion--duration--slide-in--default);
+    --#{$nav}__item--TransitionDuration--row-gap: var(--pf-t--global--motion--duration--slide-in--default);
   }
 
   // * Nav item toggle icon
   --#{$nav}__item__toggle-icon--Rotate: 0;
   --#{$nav}__item--m-expanded__toggle-icon--Rotate: 90deg;
-  --#{$nav}__item__toggle-icon--TransitionDuration: var(--pf-t--global--motion--duration--icon--default);
+  --#{$nav}__item__toggle-icon--TransitionDuration--transform: var(--pf-t--global--motion--duration--icon--default);
 
 
   // * Nav link
@@ -239,7 +239,7 @@
 
   [hidden] {
     --#{$nav}__list--RowGap: 0;
-
+    
     grid-template-rows: 0fr;
   }
 }
@@ -248,8 +248,8 @@
 .#{$nav}__item {
   row-gap: 0; // Only have row-gap when expanded and transition it
   scroll-snap-align: var(--#{$nav}__item--ScrollSnapAlign);
-  transition-timing-function: var(--#{$nav}__item--TransitionTimingFunction);
-  transition-duration: var(--#{$nav}__item--TransitionDuration);
+  transition-timing-function: var(--#{$nav}__item--TransitionTimingFunction--row-gap);
+  transition-duration: var(--#{$nav}__item--TransitionDuration--row-gap);
   transition-property: row-gap;
 
   > .#{$nav}__link[button] {
@@ -348,7 +348,7 @@
 // - Nav toggle icon
 .#{$nav}__toggle-icon {
   display: inline-block;
-  transition-duration: var(--#{$nav}__item__toggle-icon--TransitionDuration);
+  transition-duration: var(--#{$nav}__item__toggle-icon--TransitionDuration--transform);
   transition-property: transform;
   transform: rotate(var(--#{$nav}__item__toggle-icon--Rotate));
 
