feat(Nav): fix the hidden selector for subnav

--- a/src/patternfly/components/Nav/nav.scss
+++ b/src/patternfly/components/Nav/nav.scss
@@ -237,7 +237,7 @@
     grid-template-rows: 0fr;
   }
 
-  [hidden] {
+  &[hidden] {
     --#{$nav}__list--RowGap: 0;
     
     grid-template-rows: 0fr;
